# visual-hashing-yew

./: 1.app.js  Cargo.toml  README.md  app.js  app.wasm  bootstrap.js  index.html  package-lock.json  package.json  postcss.config.js  server.php  style.css  tailwind.config.js  webpack.config.js
src/: app.rs
static/: index.html  style.css
