[package]
name = "visual-hashing"
version = "0.1.0"
authors = ["Muhammad Syifa <emsifa@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
strum = "0.17"
strum_macros = "0.17"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = "0.15"
js-sys = "0.3.39"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d'
]
